# auto_patcher

./: Cargo.toml  build.rs  example.json
src/: main.rs
