[package]
name = "auto_patcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zstd = "0.13"
crc32c = "0.6"
xdelta3 = "0.1"
rayon = "1"
indicatif = "0.18"

[profile.release]
opt-level = 3
codegen-units = 1